--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
       <div id="front" class="album">
         <div id="title-box">
 
-          <!-- Level 4 'PHARRELL WILLIAMS' Header -->
+          PHARRELL WILLIAMS
 
-          <!-- Level 2 'HAPPY' Header -->
+HAPPY
 
-          <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
+| FROM DESPICABLE ME 2 |
 
         </div>
       </div>
